--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  scrollbar-width: none;
+}
+
 body {
   background-color: #000;
   box-sizing: border-box;
@@ -121,6 +125,15 @@ p {
   width: 120px;
 }
 
+.team-card a {
+  text-decoration: none;
+}
+
+.team-card a p {
+  margin: 0;
+  padding: 0;
+}
+
 .team-card.selected {
   border-color: #007bff;
   box-shadow: 0 8px 16px #007bff66;
@@ -218,6 +231,11 @@ p {
 
 .menu-content {
   margin-top: 20px;
+}
+
+.menu-content p {
+  text-align: center;
+  display: flex;
 }
 
 .strategy-step-main {
