--- a/src/components/EditorPage/VariationForm.css
+++ b/src/components/EditorPage/VariationForm.css
@@ -1,18 +1,23 @@
-.step-form-container {
-    border: 1px solid #ccc;
+.variation-form-container {
+    border: 1px dashed #aaa;
+    margin: 10px 0;
     padding: 10px;
-    margin-bottom: 10px;
     background-color: #2a2b30;
     border-radius: 6px;
 }
 
-.step-form-container label {
+.variation-form-container h4 {
+    color: #fff;
+    margin-top: 0;
+}
+
+.variation-form-container label {
     color: #e4e6eb;
     display: block;
     margin: 5px 0;
 }
 
-.step-form-container input {
+.variation-form-container input {
     background-color: #1a1a1a;
     border: 1px solid #3a3b3d;
     border-radius: 4px;
@@ -22,12 +27,12 @@
     width: 200px;
 }
 
-.step-form-container input:focus {
+.variation-form-container input:focus {
     border-color: #007bff;
     outline: none;
 }
 
-.step-form-container h4 {
+.variation-form-container h5 {
     color: #fff;
     margin: 15px 0 10px;
 }
