--- a/src/pages/breeding/components/IVsSelector.css
+++ b/src/pages/breeding/components/IVsSelector.css
@@ -1,48 +1,51 @@
 .ivs-container {
-    display: flex;
-    gap: 15px;
-    justify-content: center;
-    margin-top: 30px;
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  margin-top: 30px;
 }
 
 .ivs-selector-button {
-    background: #24252a;
-    border: 2px solid transparent;
-    border-radius: 8px;
-    box-shadow: 0 12px 32px #000000;
-    color: #e4e6eb;
-    cursor: pointer;
-    font-size: 1.5rem;
-    font-weight: 700;
-    height: 60px;
-    transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease;
-    width: 80px;
+  background: #24252a;
+  border: 2px solid transparent;
+  border-radius: 8px;
+  box-shadow: 0 12px 32px #000000;
+  color: #e4e6eb;
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: 700;
+  height: 60px;
+  transition:
+    transform 0.2s ease,
+    box-shadow 0.2s ease,
+    border-color 0.2s ease;
+  width: 80px;
 }
 
 .ivs-selector-button:hover {
-    border-color: #646cff;
-    transform: translateY(-5px);
+  border-color: #646cff;
+  transform: translateY(-5px);
 }
 
 .ivs-selector-button.selected {
-    background-color: #3a3b3d;
-    border-color: #007bff;
-    box-shadow: 0 8px 16px rgba(0, 123, 255, 0.4);
-    transform: translateY(-3px);
+  background-color: #3a3b3d;
+  border-color: #007bff;
+  box-shadow: 0 8px 16px rgba(0, 123, 255, 0.4);
+  transform: translateY(-3px);
 }
 
 .nature-container {
-    align-items: center;
-    display: flex;
-    gap: 15px;
-    justify-content: center;
+  align-items: center;
+  display: flex;
+  gap: 15px;
+  justify-content: center;
 }
 
 .nature-container input {
-    height: 25px;
-    width: 25px;
+  height: 25px;
+  width: 25px;
 }
 
 .nature-container p {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
