--- a/src/pages/editor/EditorPage.css
+++ b/src/pages/editor/EditorPage.css
@@ -55,7 +55,9 @@
   font-size: 0.9rem;
   margin-top: 5px;
   padding: 0.5em;
-  transition: border-color 0.25s, background-color 0.2s ease;
+  transition:
+    border-color 0.25s,
+    background-color 0.2s ease;
   width: 100%;
 }
 
